--- a/public/landing/app.css
+++ b/public/landing/app.css
@@ -14178,7 +14178,7 @@ input[type=button].btn-block {
   border: 0;
 }
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #16181b;
+  color: #285ba3;
   text-decoration: none;
   background-color: #e9ecef;
 }
@@ -14210,7 +14210,7 @@ input[type=button].btn-block {
 .dropdown-item-text {
   display: block;
   padding: 0.25rem 1.5rem;
-  color: #212529;
+  color: #285ba3;
 }
 
 .btn-group,
