--- a/public/landing/app.css
+++ b/public/landing/app.css
@@ -14013,7 +14013,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.9rem;
-  color: #212529;
+  color: #285ba3;
   text-align: left;
   list-style: none;
   background-color: #fff;
