--- a/public/landing/app.css
+++ b/public/landing/app.css
@@ -11174,12 +11174,12 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #e65927;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #0056b3;
+  color: #e65927;
   text-decoration: underline;
 }
 
