--- a/public/landing/app.css
+++ b/public/landing/app.css
@@ -11039,7 +11039,7 @@ readers do not read off random characters that represent icons */
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
+  --primary: #285ba3;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -15859,7 +15859,7 @@ a.badge-success:focus, a.badge-success.focus {
 
 .badge-info {
   color: #fff;
-  background-color: #17a2b8;
+  background-color: #285ba3;
 }
 a.badge-info:hover, a.badge-info:focus {
   color: #fff;
@@ -16005,15 +16005,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-info {
-  color: #0c5460;
-  background-color: #d1ecf1;
-  border-color: #bee5eb;
+  color: #285ba3;
+  background-color: #285ba3;
+  border-color: #285ba3;
 }
 .alert-info hr {
-  border-top-color: #abdde5;
+  border-top-color: #285ba3;
 }
 .alert-info .alert-link {
-  color: #062c33;
+  color: #285ba3;
 }
 
 .alert-warning {
@@ -17251,7 +17251,7 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #17a2b8 !important;
+  background-color: #285ba3 !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
@@ -17361,7 +17361,7 @@ button.bg-dark:focus {
 }
 
 .border-info {
-  border-color: #17a2b8 !important;
+  border-color: #285ba3 !important;
 }
 
 .border-warning {
