Cambio simulador de deuda

--- a/public/landing/app.css
+++ b/public/landing/app.css
@@ -20829,6 +20829,12 @@ button.bg-dark:focus {
   text-align: center !important;
 }
 
+.text-center-small {
+    font-size: 10 !important;
+    font-style: italic !important;
+    text-align: center !important;
+  }
+
 @media (min-width: 576px) {
   .text-sm-left {
     text-align: left !important;
